--- a/app/src/main/res/layout/exist_trade_submit.xml
+++ b/app/src/main/res/layout/exist_trade_submit.xml
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
-                        android:text="Existing Trade Licence"
+                        android:text="@string/existing_Trade_Licence"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_15sdp"
@@ -165,7 +165,7 @@
                         android:layout_marginLeft="@dimen/margin_left_20dp"
                         android:layout_marginTop="@dimen/padding"
                         android:layout_marginRight="@dimen/margin_left_20dp"
-                        android:text="Traders Code"
+                        android:text="@string/trade_Code"
                         android:scrollbars="vertical"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_15sdp"
@@ -585,7 +585,7 @@
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:onClick="@{()-> activity.viewImageScreen()}"
-                        android:text="View Image"
+                        android:text="@string/view_image"
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_15sdp" />
@@ -603,7 +603,7 @@
                         android:clickable="true"
                         android:visibility="gone"
                         android:foreground="?attr/selectableItemBackground"
-                        android:text="Submit"
+                        android:text="@string/submit"
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_15sdp" />
