--- a/app/src/main/res/drawable/background_text_email.xml
+++ b/app/src/main/res/drawable/background_text_email.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#5E97FB" />
+    <solid android:color="#B481FC" />
 
 
 
 
 
     <corners
-        android:bottomLeftRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="0dp"
-        android:bottomRightRadius="0dp"
+        android:bottomLeftRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:bottomRightRadius="10dp"
         />
 
 </shape>
