--- a/app/src/main/res/layout/field_visit_recycler.xml
+++ b/app/src/main/res/layout/field_visit_recycler.xml
@@ -5,14 +5,14 @@
     android:layout_height="wrap_content"
     android:background="@color/full_transparent"
     android:layout_marginTop="5dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     android:gravity="center_vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        android:paddingTop="10dp"
+        android:paddingTop="0dp"
         android:id="@+id/relative2"
         android:background="@drawable/cornered_border_bg"
         android:gravity="center_vertical">
@@ -21,7 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="7dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageview">
@@ -41,12 +44,15 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/content1"
                 android:layout_toRightOf="@id/imageview"
-                android:layout_margin="10dp">
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="10dp"
+                >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="3"
+                    android:padding="2dp"
                     android:id="@+id/rel2">
                     <TextView
                         android:layout_width="0dp"
@@ -68,7 +74,7 @@
                         android:fontFamily="sans-serif" />
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1.5"
+                        android:layout_weight="1.57"
                         android:layout_height="wrap_content"
                         android:textColor="@color/border_line"
                         android:textSize="15sp"
@@ -99,6 +105,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="3"
+                    android:padding="2dp"
                     android:layout_below="@+id/rel2"
                     android:id="@+id/rel1">
                     <TextView
@@ -138,6 +145,7 @@
                     android:orientation="horizontal"
                     android:layout_below="@+id/rel1"
                     android:weightSum="3"
+                    android:padding="2dp"
 
                     android:id="@+id/rel3">
                     <TextView
