--- a/app/src/main/res/layout/new_dashboard_new.xml
+++ b/app/src/main/res/layout/new_dashboard_new.xml
@@ -67,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
-                        android:text="Dashboard"
+                        android:text="@string/dashboard"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_15sdp"
@@ -226,7 +226,7 @@
                                     android:id="@+id/trade_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Trade Licence"
+                                    android:text="@string/trade_Licence"
                                     android:textSize="18dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/blue_background" />
@@ -296,7 +296,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
-                                    android:text="Field Visit"
+                                    android:text="@string/field_Visit"
                                     android:textSize="18dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/blue_background" />
@@ -380,7 +380,7 @@
                                     android:id="@+id/assess_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Assessment"
+                                    android:text="@string/assessment"
                                     android:textSize="18dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/blue_background" />
@@ -453,7 +453,7 @@
                                     android:id="@+id/dailcoll_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Daily Collection"
+                                    android:text="@string/daily_Collection"
                                     android:textSize="18dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/blue_background" />
@@ -538,7 +538,7 @@
                                     android:id="@+id/pending_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Sync Data"
+                                    android:text="@string/sync_Data"
                                     android:textSize="18dp"
                                     android:textStyle="bold"
                                     android:textColor="@color/blue_background" />
@@ -660,7 +660,7 @@
                             android:background="@drawable/click_here"
                             android:clickable="true"
                             android:foreground="?attr/selectableItemBackground"
-                            android:text="Sync"
+                            android:text="@string/sync_Data"
                             android:onClick="@{()-> activity.pendingScreen()}"
                             android:textAllCaps="false"
                             android:textColor="@android:color/black"
